Rearrange specs on README to put simpler spec above more difficult specs

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <h1>Welcome to Mario and Luigi's Pizzaria</h1>
         <h2>Build Your Own Pizza</h2>
 <!-- ****** INPUTS AND LABELS AS LIST ITEMS ****** -->
-        <ul class="flex-outer">
+        <!-- <ul class="flex-outer">
             <li>
               <label for="name">Your name</label>
               <input type="text" name="name" value="" id="name" placeholder="Your name">
             </li>
-        </ul>
+        </ul> -->
 
       </div>
     </div>
