--- a/index.html
+++ b/index.html
@@ -21,6 +21,24 @@
               <input type="text" name="name" value="" id="name" placeholder="Your name">
             </li>
         </ul> -->
+        <form id="place-order" class="form-control" action="index.html" method="post">
+          <h3>Pick a Size</h3>
+          <p><input type="radio" name="size" value="large"> Large - $16</p>
+          <p><input type="radio" name="size" value="medium"> Medium - $12</p>
+          <p><input type="radio" name="size" value="small"> Small - $8</p>
+
+          <h3>Pick Your Toppings</h3>
+          <p><input type="checkbox" name="topping" value="pepperoni"> Pepperoni - $3</p>
+          <p><input type="checkbox" name="topping" value="mushrooms"> Mushrooms - $2</p>
+          <p><input type="checkbox" name="topping" value="olives"> Olives - $2</p>
+
+          <div class="button-row">
+            <button class="btn btn-primary" type="submit" name="button">Place Order</button>
+          </div>
+          <p class="order"></p>
+          <p class="thankyou">Thank you for your order.</p>
+        </form>
+
 
       </div>
     </div>
