Clear inputs when order placed

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         </ul> -->
         <form id="place-order" class="form-control" action="index.html" method="post">
           <h3>Pick a Size</h3>
-          <p><input type="radio" name="size" value="large"> Large - $16</p>
-          <p><input type="radio" name="size" value="medium"> Medium - $12</p>
-          <p><input type="radio" name="size" value="small"> Small - $8</p>
+          <p><input type="radio" name="size" value="Large"> Large - $16</p>
+          <p><input type="radio" name="size" value="Medium"> Medium - $12</p>
+          <p><input type="radio" name="size" value="Small"> Small - $8</p>
 
           <h3>Pick Your Toppings</h3>
           <p><input type="checkbox" name="topping" value="pepperoni"> Pepperoni - $3</p>
