--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           <p><input type="radio" name="size" value="Small"> Small - $8</p>
 
           <h3>Pick Your Toppings</h3>
-          <p><input type="checkbox" name="topping" value="pepperoni"> Pepperoni - $3</p>
-          <p><input type="checkbox" name="topping" value="mushrooms"> Mushrooms - $2</p>
-          <p><input type="checkbox" name="topping" value="olives"> Olives - $2</p>
+          <p><input type="checkbox" name="topping" value="Pepperoni"> Pepperoni - $3</p>
+          <p><input type="checkbox" name="topping" value="Mushrooms"> Mushrooms - $2</p>
+          <p><input type="checkbox" name="topping" value="Olives "> Olives - $2</p>
 
           <div class="button-row">
             <button class="btn btn-primary" type="submit" name="button">Place Order</button>
